<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_review_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="4dp"
        tools:text="@string/text_review_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_review_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:linksClickable="true"
        tools:text="@string/text_review_url"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_review_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="4dp"
        tools:text="@string/text_review_author"
        android:textSize="12sp"
        android:textStyle="italic" />

</LinearLayout>