<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/llay_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="8dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/star_enabled" />

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom|end"
                android:src="@drawable/star_disabled" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_title_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/text_title"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_release_date"
            android:textSize="12sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading_bar_item"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_error_message_item"
        android:text="@string/error_message"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="invisible" />

</FrameLayout>